// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = error 1`] = `
{
  "checked": false,
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "radio",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = none 1`] = `
{
  "checked": false,
  "name": "Some label",
  "role": "radio",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = success 1`] = `
{
  "checked": false,
  "name": "Some label. Some success message.",
  "role": "radio",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = error 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = success 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some success message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "status",
}
`;

exports[`accessibility should expose correct accessibility tree properties in error state: Of Input 1`] = `
{
  "checked": false,
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "radio",
}
`;

exports[`accessibility should expose correct accessibility tree properties in error state: Of Message 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should expose correct accessibility tree when loading=true 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": "Some label",
          "role": "StaticText",
        },
      ],
      "disabled": true,
      "name": "",
      "role": "LabelText",
    },
    {
      "children": [
        {
          "children": [
            {
              "checked": false,
              "name": "Some label",
              "role": "radio",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
                {
                  "children": [
                    {
                      "role": "none",
                    },
                    {
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "name": "Loading",
          "role": "StaticText",
        },
      ],
      "name": "",
      "role": "status",
    },
  ],
  "role": "none",
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "checked": false,
  "name": "Some label",
  "role": "radio",
}
`;
